test/cases/bad/bad046.lat
// Argument mismatch

class A {}

class B extends A {}

int main() {
    foo(new A);

    return 0;
}

void foo(B b) {}